<resources>

    <!-- Application name -->
    <string name="app_name">Widr Lite</string>

    <!-- Bottom Navigation Items -->
    <string name="nav_title_news">News</string>
    <string name="nav_title_messages">Messages</string>
    <string name="nav_title_create">Create</string>
    <string name="nav_title_notifications">Notifications</string>
    <string name="nav_title_profile">Profile</string>

    <!-- Default Errors -->
    <string name="default_error_api">Something went wrong on our side</string>
    <string name="default_error_submit">Something went wrong, try again later</string>
    <string name="default_error_password">Password length should be at least 6 symbols</string>
    <string name="default_error_no_internet">Please, check your internet connection</string>
    <string name="default_error_long_message">Maximum length of the message is 600 symbols</string>

    <!-- Auth Errors -->
    <string name="auth_error_first_name">Please enter your first name</string>
    <string name="auth_error_last_name">Please enter your last name</string>
    <string name="auth_error_email">Please enter your email address</string>
    <string name="auth_error_phone_number">Please enter your phone number</string>
    <string name="auth_error_password">Password must be at least 6 characters</string>

    <!-- Fragment Feed -->
    <string name="fragment_feed_label_one">Toutes les annonces</string>
    <string name="fragment_feed_label_two">Explorer les offres</string>
    <string name="fragment_feed_label_three">Trouver on profile</string>

    <!-- Activity Chat -->
    <string name="activity_chat_button_text_return">Retour</string>
    <string name="activity_chat_text_mutual_contacts">Display mutual contact</string>
    <string name="activity_chat_dialog_remote_title">Are you sure</string>
    <string name="activity_chat_dialog_remote_body">you want to delete?</string>
    <string name="activity_chat_dialog_positive">Yes</string>
    <string name="activity_chat_dialog_negative">No</string>

    <!-- Activity Auth -->
    <string name="activity_auth_edit_text_hint_first_name">First Name</string>
    <string name="activity_auth_edit_text_hint_last_name">Last Name</string>
    <string name="activity_auth_edit_text_hint_phone_number">Phone number</string>
    <string name="activity_auth_edit_text_hint_email">Your Email</string>
    <string name="activity_auth_edit_text_hint_password">Password</string>
    <string name="activity_auth_text_view_terms">By continuing you are indicating that you have read and agree to the Terms of Service and Privacy Policy</string>
    <string name="activity_auth_text_view_terms_error">You have to accept terms and privacy policy to continue</string>
    <string name="activity_auth_check_box_text">I accept the terms and conditions</string>
    <string name="activity_auth_button_sign_up">Sign Up</string>
    <string name="activity_auth_terms_part_one">By continuing you are indicating that you have read and agree to the</string>
    <string name="activity_auth_terms_part_two">Terms of Service</string>
    <string name="activity_auth_terms_part_three">Terms of Service</string>
    <string name="activity_auth_terms_part_four">and</string>
    <string name="activity_auth_terms_part_five">Privacy Policy</string>
    <string name="activity_auth_terms_part_six">Privacy Policy</string>

    <!-- Fragment Notification -->
    <string name="fragment_notification_header_button_text">Settings</string>
    <string name="fragment_notification_header_title">Notifications</string>

    <!-- Fragment Profile -->
    <string name="fragment_profile_title_notif">Manage notifications</string>
    <string name="fragment_profile_body_notif">4 filters saved</string>
    <string name="fragment_profile_title_premium">Premium</string>
    <string name="fragment_profile_body_premium">You are using Free plan</string>
    <string name="fragment_profile_title_posts">My posts</string>
    <string name="fragment_profile_body_posts">4 active, 12 archived</string>
    <string name="fragment_profile_title_sent">Sent recommendations</string>
    <string name="fragment_profile_body_sent">216 sent, 8 under review</string>
    <string name="fragment_profile_title_contacts">Contacts</string>
    <string name="fragment_profile_body_contacts">248 contacts, 16 in Widr</string>
    <string name="fragment_profile_title_calls">In-app Calls</string>
    <string name="fragment_profile_proposal_gift_text">Invite friends and \nget gifts and bonuses</string>

    <!-- Navigation Drawer -->
    <string name="navigation_drawer_item_call">Make Call</string>
    <string name="navigation_drawer_item_send">Send photo</string>
    <string name="navigation_drawer_item_photo">Make Photo</string>

    <!-- Item Privacy -->
    <string name="item_privacy_title">Droit des sociétés</string>
    <string name="item_privacy_body">Aix-end-Provence</string>

    <!-- Item Chat -->
    <string name="item_chat_edit_text_hint">Message</string>

    <!-- Item Push Notifications -->
    <string name="item_push_notifications_title">Get more from Widr</string>
    <string name="item_push_notifications_body">Enable Push notifications</string>

    <!-- Item Notifications -->
    <string name="item_notifications_button_text">Read</string>

    <!-- Item Slide Up Panel -->
    <string name="item_slide_up_button_rec_text">Send recommendation \nopen a chat</string>
    <string name="item_slide_up_button_share">Share</string>
    <string name="item_slide_up_button_share_fb">Share to Facebook</string>
    <string name="item_slide_up_title_description">Description</string>
    <string name="item_slide_up_text_description_example">If you own an Android, you\'ve probably already worded out how much fun it is to use it watch movies-it has that nice big screen, and the sound quility is surorisingly good to. Now imagine if you knew how to download Android movies without having to pay.</string>
    <string name="item_slide_up_text_contributions_example">Post has 12 contributions</string>
    <string name="item_slide_up_text_date_example">today, 8:44 AM</string>

    <!-- Item News Post -->
    <string name="item_news_post_text_offer">Offre</string>
    <string name="item_news_post_text_job">Avocat d\'affaires</string>
    <string name="item_news_post_text_location">à Rennes, France</string>
    <string name="item_news_post_text_description">Sometimes this is the irony of promoting your business product and services, because…</string>

    <!-- Item Mutual Contacts -->
    <string name="item_mutual_contacts_text_example">Request to show 18 mutual contacts</string>

    <!-- Item Location -->
    <string name="item_location_text_example">Algiers</string>

    <!-- Item Conversation -->
    <string name="item_conversation_text_title">Jason Jackson</string>
    <string name="item_conversation_text_body">There are millions of users, and there will…</string>
    <string name="item_conversation_text_job">Graphic Designer - 2D Artist</string>
    <string name="item_conversation_text_date">11:24 AM</string>

    <!-- Activity Splash -->
    <string name="activity_splash_text_welcome">Welcome to Widr Lite</string>


</resources>
