<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/item_gradient_feed_header">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <include layout="@layout/item_current_location" />

            </FrameLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:padding="8dp"
                android:src="@drawable/ic_menu_search"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.alexanderkhyzhun.widrlite.views.WidrTabLayout
            android:id="@+id/fragment_feed_tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/item_gradient_feed_header"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="8dp"
            android:textAlignment="center"
            app:tabIndicatorColor="@android:color/white"
            app:tabIndicatorFullWidth="false"
            app:tabIndicatorGravity="bottom"
            app:tabIndicatorHeight="2dp"
            app:tabMode="scrollable"
            app:tabTextColor="@android:color/white">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/fragment_feed_tab_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fragment_feed_label_one" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/fragment_feed_tab_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fragment_feed_label_two" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/fragment_feed_tab_three"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fragment_feed_label_three" />

        </com.alexanderkhyzhun.widrlite.views.WidrTabLayout>

        <com.alexanderkhyzhun.widrlite.views.WidrViewPager
            android:id="@+id/fragment_feed_view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

</RelativeLayout>
